--- a/css/core-styles.css
+++ b/css/core-styles.css
@@ -142,6 +142,7 @@
     color: #fff;
     min-width: 9.375rem;
     padding: 0 1.5rem;
+    border-radius: 0.25rem;
     background: var(--primary);
     display: inline-block;
     position: relative;
@@ -1009,6 +1010,7 @@ html {
       min-width: 9.375rem;
       padding: 0 2rem;
       overflow: hidden;
+      border-radius: 0.25rem;
       background: var(--gradient);
       display: inline-block;
       position: relative;
